[gd_scene load_steps=11 format=3 uid="uid://dh74b3h6q3026"]

[ext_resource type="Script" path="res://scenes/Main.gd" id="1_0lgb2"]
[ext_resource type="Texture2D" uid="uid://c33xrciyt6ilb" path="res://art-and-sound/bg_1_1.png" id="2_as2ci"]
[ext_resource type="FontFile" uid="uid://by86tftjfcedw" path="res://art-and-sound/kenney_space-shooter-redux/Bonus/kenvector_future_thin.ttf" id="3_k5igf"]
[ext_resource type="LabelSettings" uid="uid://cnoygoxh0kgme" path="res://resources/small_textstyle.tres" id="4_xs5df"]
[ext_resource type="Theme" uid="uid://bmy6kos4l110s" path="res://resources/button-theme.tres" id="5_mt70k"]
[ext_resource type="Texture2D" uid="uid://drwhk2fn0x6rj" path="res://art-and-sound/kenney_space-shooter-redux/wrench.png" id="6_3qcx3"]
[ext_resource type="AudioStream" uid="uid://dyysuucwb4xhm" path="res://art-and-sound/OutThere.ogg" id="7_62cej"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6uu41"]

[sub_resource type="InputEventKey" id="InputEventKey_0cih4"]
device = -1
keycode = 4194309

[sub_resource type="Shortcut" id="Shortcut_f7s2m"]
events = [SubResource("InputEventKey_0cih4")]

[node name="Main" type="Node2D"]
script = ExtResource("1_0lgb2")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 648.0
offset_bottom = 1152.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_as2ci")

[node name="GameName" type="Label" parent="."]
offset_left = 3.0
offset_top = 9.0
offset_right = 642.0
offset_bottom = 132.0
theme_override_fonts/font = ExtResource("3_k5igf")
theme_override_font_sizes/font_size = 48
text = "Asteriod's Revenge"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HintLabel" type="Label" parent="."]
offset_top = 740.0
offset_right = 645.0
offset_bottom = 863.0
theme_override_fonts/font = ExtResource("3_k5igf")
theme_override_font_sizes/font_size = 48
text = "Beat the boss to unlock frenzy mode"
label_settings = ExtResource("4_xs5df")
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="."]
offset_left = 250.0
offset_top = 656.0
offset_right = 403.0
offset_bottom = 737.0
theme_override_fonts/font = ExtResource("3_k5igf")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxTexture_6uu41")
shortcut = SubResource("Shortcut_f7s2m")
text = "Play"

[node name="HelpButton" type="Button" parent="."]
offset_left = 250.0
offset_top = 888.0
offset_right = 403.0
offset_bottom = 969.0
theme_override_fonts/font = ExtResource("3_k5igf")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxTexture_6uu41")
text = "Help"

[node name="HardModeButton" type="Button" parent="."]
visible = false
offset_left = 163.0
offset_top = 767.0
offset_right = 485.0
offset_bottom = 848.0
theme_override_fonts/font = ExtResource("3_k5igf")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxTexture_6uu41")
shortcut = SubResource("Shortcut_f7s2m")
text = "Frenzy mode"

[node name="ExitButton" type="Button" parent="."]
offset_left = 245.0
offset_top = 1011.0
offset_right = 398.0
offset_bottom = 1092.0
theme = ExtResource("5_mt70k")
text = "Quit
"

[node name="SettingsButton" type="TouchScreenButton" parent="."]
modulate = Color(1, 1, 1, 0.827451)
position = Vector2(546, 1054)
texture_normal = ExtResource("6_3qcx3")

[node name="BGM" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_62cej")
autoplay = true
bus = &"Music"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="HelpButton" to="." method="_on_help_button_pressed"]
[connection signal="pressed" from="HardModeButton" to="." method="_on_hard_mode_button_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_touch_screen_button_pressed"]
